--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="src/assets/mountain.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>binh letters</title>
+    <title>Binh Le</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
@@ -17,7 +17,7 @@
 
   gtag('config', 'G-FVMZ7CE70X');
 </script>
-  <body class="bg-sky-100">
+  <body class="bg-sky-0">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
