--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="preload" href="assets/nycsubway.jpg" as="image">
+    <link rel="preload" href="assets/drexel.png" as="image">
+    <link rel="preload" href="assets/stealth.jpeg" as="image">
+    <link rel="preload" href="assets/about-image.jpg" as="image">
+    <link rel="preload" href="assets/icon.jpg" as="image">
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="src/assets/mountain.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
